# kafka

./: README.md  avro.md  kafka-python.md  pyproject.toml  schema-registry.md  topic-partition.md
app/: avro_consumer.py  avro_producer.py  avro_schema_producer.py  consumer.py  jsonschema_producer.py  producer.py  readme.md  schema.py
redpanda/: docker-compose-3broker.yml  docker-compose.yml
