[project]
name = "kafka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "attrs>=24.3.0",
    "cachetools>=5.5.0",
    "confluent-kafka>=2.7.0",
    "fastavro>=1.10.0",
    "httpx>=0.28.1",
    "jsonschema>=4.23.0",
    "referencing>=0.35.1",
    "requests>=2.32.3",
]
